--- a/src/styles/App.module.css
+++ b/src/styles/App.module.css
@@ -1,14 +1,16 @@
 .App {
     margin: 0 auto;
-    height: 100%;
-    max-width: 1000px;
-    background: #f8f8f8;
+    min-height: 100vh;
+    width: 100%;
+    background: #c38d9e;
 }
 
-
 .main {
-    min-height: 100vh;
-    padding: 2rem 5rem;
+    margin: 0 auto;
+    max-width: 1000px;
+    min-height: calc(100vh - 4rem);
+    padding: 0 5rem;
+    background-color: #e8a87c;
     
 }
 
@@ -20,5 +22,17 @@
 .main h2 {
     font-size: 2rem;
     text-align: center;
-    color: #888;
+    color: white;
 }
+
+.home {
+    width: 100%;
+    min-height: calc(100vh - 8rem);
+    background-color: #41b3a3;
+}
+
+.home h1 {
+    color: #85dccb;
+    text-shadow: 1px 2px 1px #e27d60;
+}
+
