--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,25 @@
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 html,
 body {
- background-color: #121212;
+ background: #282828;
  color: inherit;
+ width: 100%;
+ height: 100%;
+}
+
+li {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
 }
 
 
