--- a/src/styles/App.module.css
+++ b/src/styles/App.module.css
@@ -29,10 +29,24 @@
     width: 100%;
     min-height: calc(100vh - 8rem);
     background-color: #41b3a3;
+    padding: 2rem 0;
 }
 
 .home h1 {
     color: #85dccb;
     text-shadow: 1px 2px 1px #e27d60;
+}
+
+.components {
+    width: 100%;
+    min-height: calc(100vh - 8rem);
+    background-color: #e8a87c;
+    padding: 2rem 0;
+}
+.components_wrapper {
+    padding: 1rem 2rem;
+    background-color: #41b3a3;
+    border-radius: 10px;
+    box-shadow: 1px 4px 2px 1px rgba(0,0,0,0.335);
 }
 
