--- a/src/styles/App.module.css
+++ b/src/styles/App.module.css
@@ -44,9 +44,10 @@
     padding: 2rem 0;
 }
 .components_wrapper {
+    margin: 2rem 0;
     padding: 1rem 2rem;
     background-color: #41b3a3;
-    border-radius: 10px;
+    border-radius: 3px;
     box-shadow: 1px 4px 2px 1px rgba(0,0,0,0.335);
 }
 
