--- a/src/styles/App.module.css
+++ b/src/styles/App.module.css
@@ -51,3 +51,23 @@
     box-shadow: 1px 4px 2px 1px rgba(0,0,0,0.335);
 }
 
+.btn {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    outline: none;
+    border: none;
+    top: 10rem;
+    right: 10rem;
+    padding: 0.25rem;
+    border-radius: 5px;
+    background: rgba(0, 0, 0, 0.26);
+    color: #F3DDC5;
+    font-size: 1.6rem;
+    filter: drop-shadow(0 4px 3px rgba(0,0,0,0.55));
+    box-shadow: inset -2px 2px 2px rgba(0,0,0,0.4);
+    cursor: pointer;
+  }
+  
+  
