--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,12 @@
+:root {
+    --color-btn: #fff;
+    --color-btn-bg: #282828;
+    --font-size-base: 1rem;
+
+    --color-btn-alt: lightgreen;
+    --color-btn-bg-alt: tomato;
+}
+
 *,
 *:before,
 *:after {
