--- a/src/styles/App.module.css
+++ b/src/styles/App.module.css
@@ -51,7 +51,7 @@
     box-shadow: 1px 4px 2px 1px rgba(0,0,0,0.335);
 }
 
-.btn {
+.modal_btn {
     position: absolute;
     display: flex;
     align-items: center;
