--- a/src/styles/Backdrop.module.css
+++ b/src/styles/Backdrop.module.css
@@ -1,13 +1,15 @@
 .backdrop {
-    position: absolute;
+    position: fixed;
     left: 50%;
+    top: 0;
     transform: translateX(-50%);
-    height: 80%;
-    width: 80%;
+    height: 100%;
+    min-height: 100vh;
+    width: 100%;
     background: #000000e1;
     display: flex;
     align-items: center;
     align-self: center;
     justify-content: center;
-    z-index: 100;
+    z-index: 1000;
 }
