--- a/src/styles/Modal.module.css
+++ b/src/styles/Modal.module.css
@@ -1,6 +1,6 @@
 .modal {
-    width: fit-content;
-    height: fit-content;
+    width: 80%;
+    height: 80%;
     padding: 2rem;
      margin: auto;
      padding: 0 2rem;
