--- a/src/components/NavBar2/Navb.scss
+++ b/src/components/NavBar2/Navb.scss
@@ -1,16 +1,15 @@
 .nav {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 100;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    overflow-x: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  overflow-x: hidden;
 
-
-    .nbbg {
+  .nbbg {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -18,90 +17,82 @@
     top: 0;
     z-index: 1;
     object-fit: cover;
-    background: linear-gradient(120deg, rgb(196, 152, 9), goldenrod, rgb(209, 171, 76), rgb(221, 173, 52));
-    }
+    background: linear-gradient(120deg, #121212, #000 #121212 #000);
+  }
 
+  > ul {
+    margin: 0 auto;
+    list-style-type: none;
+    min-height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    background: transparent;
+    z-index: 2;
 
+    > li {
+      position: relative;
+      width: 100%;
+      padding: 1rem 0;
+      overflow: hidden;
+      font-family: "Audiowide", cursive;
+      line-height: 4.5rem;
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      background: #121212;
+      border-bottom: 1px solid rgb(221, 221, 221);
 
-
-    > ul {
-        margin: 0 auto;
-        list-style-type: none;
-        min-height: 100vh;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
+      &:hover {
         background: transparent;
-        z-index: 2;        
+      }
 
-            > li {
-                 position: relative;
-                 width: 100%;
-                 padding: 1rem 0;
-                 overflow: hidden;
-                 font-family: 'Audiowide', cursive;
-                 line-height: 4.5rem;
-                 display: flex;
-                 align-items: center;
-                 justify-content: flex-start;
-                 background: #ee3e4e;
-                 border-bottom: 1px solid black;
-     
-             &:hover {
-                 background: transparent;
-             }
-               
-                 >a {
-                    padding-left: 5vw;
-                     font-size: 2rem;
-                     color: transparent;
-                     -webkit-text-stroke: 1px black;
-                     @media screen and (max-width: 768px) {
-                         font-size: 2rem;
-                     }
-     
-                     &::before {
-                         content: attr(data-text);
-                         position: absolute;
-                         color: #fff;
-                         width: 0;
-                         overflow: hidden;
-                         transition: .8s linear;
-                         z-index: 10;
-     
-                     }
-     
-                     
-                     &:hover::before {
-                         width: 100%;
-                         -webkit-text-stroke: 1px rgb(0, 0, 0);
-                         overflow: hidden;
-                         
-                     }
-                 }
-             }
-        
+      > a {
+        padding-left: 5vw;
+        font-size: 2rem;
+        color: transparent;
+        -webkit-text-stroke: 1px rgb(255, 255, 255);
+        @media screen and (max-width: 768px) {
+          font-size: 2rem;
+        }
 
+        &::before {
+          content: attr(data-text);
+          position: absolute;
+          color: #fff;
+          width: 0;
+          overflow: hidden;
+          transition: 0.8s linear;
+          z-index: 10;
+        }
+
+        &:hover::before {
+          width: 100%;
+          -webkit-text-stroke: 1px rgb(0, 0, 0);
+          overflow: hidden;
+        }
+      }
     }
+  }
 }
 
 .custom_btn {
-    position: fixed;
-    top: 20%;
-    left: 10%;
-    font-family: 'Orbitron', sans-serif;
-    font-size: 2rem;
-    color: #ee3e4e;
-    background: #282828;
-    padding: 0.5rem 1rem;
-    border-radius: 4px;
-    border-bottom: 2px solid #ee3e4e;
-    border-right: 4px solid #ee3e4e;
+  position: fixed;
+  top: 20%;
+  left: 10%;
+  font-family: "Orbitron", sans-serif;
+  font-size: 2rem;
+  color: #ee3e4e;
+  background: #282828;
+  padding: 0.5rem 1rem;
+  border-radius: 4px;
+  border-bottom: 2px solid #ee3e4e;
+  border-right: 4px solid #ee3e4e;
 }
 
 .nbtest {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    background: #ee3e4e;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background: #ee3e4e;
 }
