--- a/src/pages/page3/Page3.module.css
+++ b/src/pages/page3/Page3.module.css
@@ -16,6 +16,7 @@ background-color: pink;
     width: 80%;
     height: 100%;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
