--- a/src/styles/Modal.module.css
+++ b/src/styles/Modal.module.css
@@ -31,4 +31,5 @@
    font-size: 2rem;
    filter: drop-shadow(0 4px 3px rgba(0,0,0,0.55));
    box-shadow: inset -2px 2px 2px rgba(0,0,0,0.4);
+   cursor: pointer;
    }
