--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,6 +5,9 @@
 
     --color-btn-alt: lightgreen;
     --color-btn-bg-alt: tomato;
+
+    
+--color-gradient-gold: linear-gradient(120deg, #BF953F, #FCF6BA, #B38728, #FBF5B7, #AA771C);
 }
 
 *,
